# grab-o-scope

./: .gitignore  README.md  grab-o-scope.ps1  grab_o_scope.py
grab-o-scope-gui/: Pipfile  README.md  config.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_gui.ps1  setup.py
grab-o-scope-gui/resources/styles/: default.qss
grab-o-scope-gui/src/: __init__.py  main.py
grab-o-scope-gui/src/core/: config_manager.py  grabber_wrapper.py
grab-o-scope-gui/src/gui/: image_viewer.py  image_viewer_widget.py  main_window.py  settings_dialog.py
grab-o-scope-gui/src/utils/: __init__.py  helpers.py  navigation_manager.py
grab-o-scope-gui/tests/: test_config_manager.py  test_grabber_wrapper.py
