[tool.poetry]
name = "grab-o-scope-gui"
version = "0.1.0"
description = "A simple GUI wrapper for the grab-o-scope script to capture oscilloscope screen images."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/grab-o-scope-gui"
repository = "https://github.com/yourusername/grab-o-scope-gui"
keywords = ["oscilloscope", "gui", "screen capture"]

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.15.4"
pyvisa = "^1.11.0"
pyvisa-py = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"